# pkcs11-cpp

./: .gitattributes  CMakeLists.txt  CMakePresets.json
.github/workflows/: workflow.yaml
include/core/: core.h
include/pkcs11/: pkcs11.h  pkcs11t.h
src/: pkcs11.ixx
src/common/: common.ixx  error.ixx  exception.ixx  function_list_provider.ixx  user_type.ixx
src/core/: bitmask.ixx  core.bitmask.ixx  core.error.ixx  core.exception.ixx  core.flags.ixx  core.functions.ixx  core.info.ixx  core.ixx  core.user.ixx  core.version.ixx  error.ixx  flags.ixx  functions.ixx  info.ixx  user.ixx  version.ixx
src/decrypt/: decrypt.ixx
src/encrypt/: encrypt.ixx
src/mechanism/: mechanism.flags.ixx  mechanism.info.ixx  mechanism.ixx  mechanism_flags.ixx  mechanism_info.ixx
src/session/: session.flags.ixx  session.info.ixx  session.ixx  session.state.ixx  session_flags.ixx  session_info.ixx  session_state.ixx
src/slot/: slot.flags.ixx  slot.info.ixx  slot.ixx  slot_flags.ixx  slot_info.ixx
src/token/: token.flags.ixx  token.info.ixx  token.ixx  token_flags.ixx  token_info.ixx
src/verify/: verify.ixx
test/: CMakeLists.txt
test/common/: version_test.cpp
test/slot/: slot_flags_test.cpp  slot_info_test.cpp
test/token/: token_flags_test.cpp
